# BrowZee-AI

./: .gclient_entries  .gcs_entries  .gitignore  0001-Add-AI-browser-integration.patch  0001-Add-AI-chat-panel-and-logo-integration.patch  0001-Roll-Chrome-Win-ARM64-PGO-Profile.patch  0003-Add-AI-chat-panel-and-logo-integration.patch  README.md  ai_server.py  browser_prefs_fixes.txt  browzee_installer.nsi  fix_browser_prefs.ps1  fix_commands.ps1  fixed_browser_prefs.cc  grit_extensions_resources.grd  gui7.html  gui8.html  main_gui.html  new.html  package-lock.json  requirements.txt  server2.py  server2.spec  service.py  setup.bat  update_src.bat  update_src.ps1  upload_changes.txt
.cipd/: tagcache.db
backup/ai_chat/: ai_chat_ui.cc  ai_chat_ui.h
browser_use/: MemoryManager.py  app_services.py  gui.html  gui2.html  gui3.html  gui4.html  gui5.html  gui6.html  gui7.html  gui8.html  gui9.html  ibit_mstr.py  main.py  server2.py
browzee_agent/: MemoryManager.py  __init__.py  app_services.py  browzee_ai_client.py  gui8.html  main_gui.html  memory_utils.py  search_agent.py  server2.py
chromium-patches/: my_patch.diff
chromium_changes/: args_list.txt
extensions/: BUILD.gn
extensions/browzee_assistant/: README.md  background.js  bg.js  index.html  index.js  manifest.json  package-lock.json  package.json  server.js  style.css  styles.css  webpack.config.js
server/: README.md  browzee_ai_client.py  package-lock.json  package.json  setup_admin.py  setup_models.py  setup_ngrok.py  test_api.py  test_external_access.py  test_gemini_api.py  test_model_request.py
(+161 files in other folders)
